; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_f_sourcesink.c_f_ss_opts_isoc_maxpacket_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_f_sourcesink.c_f_ss_opts_isoc_maxpacket_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_item = type { i32 }
%struct.f_ss_opts = type { i32, i32, i64 }

@EBUSY = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_item*, i8*, i64)* @f_ss_opts_isoc_maxpacket_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @f_ss_opts_isoc_maxpacket_store(%struct.config_item* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.config_item*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.f_ss_opts*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.config_item* %0, %struct.config_item** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load %struct.config_item*, %struct.config_item** %4, align 8
  %11 = call %struct.f_ss_opts* @to_f_ss_opts(%struct.config_item* %10)
  store %struct.f_ss_opts* %11, %struct.f_ss_opts** %7, align 8
  %12 = load %struct.f_ss_opts*, %struct.f_ss_opts** %7, align 8
  %13 = getelementptr inbounds %struct.f_ss_opts, %struct.f_ss_opts* %12, i32 0, i32 1
  %14 = call i32 @mutex_lock(i32* %13)
  %15 = load %struct.f_ss_opts*, %struct.f_ss_opts** %7, align 8
  %16 = getelementptr inbounds %struct.f_ss_opts, %struct.f_ss_opts* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @EBUSY, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %8, align 4
  br label %40

22:                                               ; preds = %3
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @kstrtou16(i8* %23, i32 0, i32* %9)
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  br label %40

28:                                               ; preds = %22
  %29 = load i32, i32* %9, align 4
  %30 = icmp sgt i32 %29, 1024
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load i32, i32* @EINVAL, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %8, align 4
  br label %40

34:                                               ; preds = %28
  %35 = load i32, i32* %9, align 4
  %36 = load %struct.f_ss_opts*, %struct.f_ss_opts** %7, align 8
  %37 = getelementptr inbounds %struct.f_ss_opts, %struct.f_ss_opts* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 8
  %38 = load i64, i64* %6, align 8
  %39 = trunc i64 %38 to i32
  store i32 %39, i32* %8, align 4
  br label %40

40:                                               ; preds = %34, %31, %27, %19
  %41 = load %struct.f_ss_opts*, %struct.f_ss_opts** %7, align 8
  %42 = getelementptr inbounds %struct.f_ss_opts, %struct.f_ss_opts* %41, i32 0, i32 1
  %43 = call i32 @mutex_unlock(i32* %42)
  %44 = load i32, i32* %8, align 4
  ret i32 %44
}

declare dso_local %struct.f_ss_opts* @to_f_ss_opts(%struct.config_item*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @kstrtou16(i8*, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
